complete project without constructors and prototypes.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
   </head>
   <body>
 <div class="container">
+<div class="row">
+  <div class="col-md-12">
+
   <h1>Pig-Dice</h1>
+  <p><button type="button" id="newGame" class="btn btn-primary">New Game</button></p>
+</div>
+
+</div>
+<div class="row">
+  <div class="col-lg-6">
+    <h4>Player One:</h4>
+    <p>Score: <span id="player1Score"></span></p>
+  </div>
+  <div class="col-lg-6">
+    <h4>Player Two:</h4>
+    <p>Score: <span id="player2Score"></span></p>
+
+  </div>
+
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <button type="button" id="rollDice" class="btn btn-danger">Roll again!</button><br>
+    <p>Count: <span class="diceCount"></span></p>
+    <button type="button" id="holdDice" class="btn btn-warning">HOLD!</button>
+  </div>
+</div>
+
+
 
 </div>
   </body>
